--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        .container {
+            padding-top: 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -126,36 +131,40 @@
                     <div class="section__services__item">
                         <div class="section__services__item-default">
                             <div class="service__default__content">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Plains_Zebra_Equus_quagga.jpg/266px-Plains_Zebra_Equus_quagga.jpg" class="service__hexagon__icon hover" alt="">
-                                <img src="assets/images/icons/branding-service-icon.svg" class="service__hexagon__icon default"
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Plains_Zebra_Equus_quagga.jpg/266px-Plains_Zebra_Equus_quagga.jpg"
+                                     class="service__hexagon__icon hover" alt="">
+                                <img src="assets/images/icons/branding-service-icon.svg"
+                                     class="service__hexagon__icon default"
                                      alt="Branding">
                                 <div class="service__hexagon"></div>
                             </div>
                             <span class="service__hexagon__title">Branding</span>
                         </div>
-                        <div class="section__services__item-turned">
-                            <h4 class="section__services__item__title text-default">Branding</h4>
-                            <ul class="section__service__list">
-                                <li><a href="#" class="section__service__list__item text-default">Naming and
-                                    copywriting</a></li>
-                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
-                                </li>
-                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
-                                    elements</a></li>
-                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
-                                </li>
-                                <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
-                                </li>
-                                <li><a href="#" class="section__service__list__item text-default">Logos / Visual
-                                    elements</a></li>
-                                <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
-                                </li>
-                            </ul>
+                    </div>
 
-                            <div class="hexagon__shadow additional-action">
-                                <button class="hexagon__button hexagon__transparent">Open</button>
-                            </div>
+                    <div class="section__services__item-turned">
+                        <h4 class="section__services__item__title text-default">Branding</h4>
+                        <ul class="section__service__list">
+                            <li><a href="#" class="section__service__list__item text-default">Naming and
+                                copywriting</a></li>
+                            <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                            </li>
+                            <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                elements</a></li>
+                            <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                            </li>
+                            <li><a href="#" class="section__service__list__item text-default">Visual Identity</a>
+                            </li>
+                            <li><a href="#" class="section__service__list__item text-default">Logos / Visual
+                                elements</a></li>
+                            <li><a href="#" class="section__service__list__item text-default">Brand strategy</a>
+                            </li>
+                        </ul>
+
+                        <div class="hexagon__shadow additional-action">
+                            <button class="hexagon__button hexagon__transparent">Open</button>
                         </div>
+                        <span class="close-service">X</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
@@ -358,7 +367,8 @@
             </ul>
             <div class="row">
                 <div class="col-xl-3 col-md-4 col-12 portfolio">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Plains_Zebra_Equus_quagga.jpg/266px-Plains_Zebra_Equus_quagga.jpg" class="portfolio__image" width="415" alt="Portfolio">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Plains_Zebra_Equus_quagga.jpg/266px-Plains_Zebra_Equus_quagga.jpg"
+                         class="portfolio__image" width="415" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title">Lorem Ipsum</span>
                         <span class="portfolio__about__subtitle">Lorem Ipsum</span>
@@ -367,7 +377,8 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-12 portfolio">
-                    <img src="https://www.komar.de/en/media/catalog/product/cache/5/image/9df78eab33525d08d6e5fb8d27136e95/N/G/NGX8-007_5.jpg" class="portfolio__image" alt="Portfolio">
+                    <img src="https://www.komar.de/en/media/catalog/product/cache/5/image/9df78eab33525d08d6e5fb8d27136e95/N/G/NGX8-007_5.jpg"
+                         class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
                         <span class="portfolio__about__subtitle text-ellipsis">Lorem Ipsum</span>
@@ -376,7 +387,8 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-4 col-12 portfolio">
-                    <img src="https://media.npr.org/assets/img/2021/10/15/gettyimages-456764036_wide-539c807321ba93e094a5b1e528ee46a60f5afb1e.jpg?s=1400" class="portfolio__image" alt="Portfolio">
+                    <img src="https://media.npr.org/assets/img/2021/10/15/gettyimages-456764036_wide-539c807321ba93e094a5b1e528ee46a60f5afb1e.jpg?s=1400"
+                         class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
                         <span class="portfolio__about__subtitle text-ellipsis">Lorem Ipsum</span>
