--- a/portfolio.html
+++ b/portfolio.html
@@ -77,10 +77,10 @@
         <div class="col-lg-6 col-12 portfolio__hexagons">
             <div class="main">
                 <div class="container_hx">
-                    <div class="service__hexagon">
+                    <div class="service__hexagon" data-target="product">
                         <span class="portfolio__hexagon__text">Product photo</span>
                     </div>
-                    <div class="service__hexagon">
+                    <div class="service__hexagon" data-target="asana">
                         <span class="portfolio__hexagon__text">Asana</span>
                     </div>
                     <div class="service__hexagon">
@@ -126,7 +126,7 @@
         </div>
         <div class="col-xl-12 section__portfolio">
             <div class="row">
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="product">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <a href="./projects.html" class="portfolio__about">
                         <span class="portfolio__about__title">Lorem Ipsum</span>
@@ -135,7 +135,7 @@
                              alt="icon">
                     </a>
                 </div>
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="product">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -144,7 +144,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="asana">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -153,7 +153,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="asana">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                     <div class="portfolio__about">
                         <span class="portfolio__about__title text-ellipsis">Lorem Ipsum</span>
@@ -162,7 +162,7 @@
                              alt="icon">
                     </div>
                 </div>
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="asana">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
                 <div class="col-md-3 col-12 portfolio">
