Changed filter functionality

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
                         <span class="portfolio__hexagon__text">Asana</span>
                     </div>
                     <div class="service__hexagon">
-                        <span class="portfolio__hexagon__text">Other Product</span>
+                        <span class="portfolio__hexagon__text" data-target="other">Other Product</span>
                     </div>
                     <div class="service__hexagon">
                         <span class="portfolio__hexagon__text">Other Product</span>
@@ -165,13 +165,13 @@
                 <div class="col-md-3 col-12 portfolio" data-filter="asana">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="other">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="other">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
-                <div class="col-md-3 col-12 portfolio">
+                <div class="col-md-3 col-12 portfolio" data-filter="other">
                     <img src="assets/images/portfolio-image.png" class="portfolio__image" alt="Portfolio">
                 </div>
             </div>
