Fixed mobile menu design issues

--- a/project-inner.html
+++ b/project-inner.html
@@ -37,25 +37,26 @@
 <nav class="nav__menu d-flex">
     <img src="assets/images/logo.png" alt="Logo" class="menu__logo">
     <div class="menu__container">
-        <ul class="menu">
-            <li><a href="./index.html" class="menu__item text-default active">Home</a></li>
-            <li><a href="#services" class="menu__item text-default">Services</a></li>
-            <li><a href="#plans" class="menu__item text-default">Plans</a></li>
-            <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
-            <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
-            <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
-            <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
-        </ul>
-        <div class="menu__lang">
-            <span class="menu__lang__selected text-default d-flex">Eng</span>
-            <ul class="menu__lang__list">
-                <li><a href="#" class="lang__list__item text-default">Arm</a></li>
-                <li><a href="#" class="lang__list__item text-default">Eng</a></li>
-                <li><a href="#" class="lang__list__item text-default">Rus</a></li>
+        <div class="menu__content">
+            <ul class="menu">
+                <li><a href="./index.html" class="menu__item text-default">Home</a></li>
+                <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
+                <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
+                <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
+                <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
             </ul>
+            <div class="menu__lang">
+                <span class="menu__lang__selected text-default d-flex">Eng</span>
+                <ul class="menu__lang__list">
+                    <li><a href="#" class="lang__list__item text-default">Arm</a></li>
+                    <li><a href="#" class="lang__list__item text-default">Eng</a></li>
+                    <li><a href="#" class="lang__list__item text-default">Rus</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-    <img src="assets/images/icons/hamburger-menu-icon.svg" class="mobile__menu__icon" alt="Menu">
+    <img src="assets/images/icons/hamburger-menu-icon.svg" class="mobile__menu__icon toggleMobileMenu" alt="Menu">
+    <img src="assets/images/icons/close__menu.svg" class="mobile__menu__icon-close toggleMobileMenu">
 </nav>
 
 <div class="container">
