Changed home page design

--- a/about-project.html
+++ b/about-project.html
@@ -41,7 +41,7 @@
             <ul class="menu">
                 <li><a href="./index.html" class="menu__item text-default">Home</a></li>
                 <li><a href="./portfolio.html" class="menu__item text-default">Portfolio</a></li>
-                <li><a href="./blog.html" class="menu__item text-default">Blog</a></li>
+                <li><a href="./blog.html" class="menu__item text-default active">Blog</a></li>
                 <li><a href="./about-us.html" class="menu__item text-default">About us</a></li>
                 <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
             </ul>
