--- a/index.html
+++ b/index.html
@@ -24,21 +24,12 @@
 
     <link rel="stylesheet" href="assets/styles/main.css?v=1.0">
     <link rel="stylesheet" href="assets/styles/media.css?v=2.0">
+    <link rel="stylesheet" href="assets/styles/home.css?v=2.0">
 
     <link rel="stylesheet" type="text/css" href="assets/styles/slick/slick.css"/>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        .container {
-            padding-top: 0;
-        }
-
-        .nav__menu.scroll {
-            background: #ffffff;
-            box-shadow: 0 0 10px rgb(0 0 0 / 25%);
-        }
-    </style>
 </head>
 
 <body>
@@ -57,7 +48,7 @@
                 <li><a href="#footer" class="menu__item text-default">Contacts</a></li>
             </ul>
             <div class="menu__lang">
-                <span class="menu__lang__selected text-default d-flex">Eng</span>
+                <span class="menu__lang__selected text-default">Eng</span>
                 <ul class="menu__lang__list">
                     <li><a href="#" class="lang__list__item text-default">Arm</a></li>
                     <li><a href="#" class="lang__list__item text-default">Eng</a></li>
@@ -70,18 +61,15 @@
     <img src="assets/images/icons/close__menu.svg" class="mobile__menu__icon-close toggleMobileMenu">
 </nav>
 
+<img src="/assets/images/main__bg__desktop.png" class="desktop__bg" alt="BG">
 <div class="container">
     <!--  Top section  -->
-    <div class="row">
+    <div class="row" id="first_section">
         <div class="col-xl-6 col-lg-6 col-md-12 col-12 top__section-left">
-            <div class="logo__container">
-                <img class="logo__container__main" src="./assets/images/logo.png" alt="BeeBrand">
-            </div>
-            <h1 class="main__title">Lorem Ipsum</h1>
-            <p class="main__description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-                took a galley of type and
-                scrambled it to make a type specimen book.
+            <p class="main__title">Welcome to</p>
+            <h1 class="main__brand__name">Beebrand</h1>
+            <p class="main__description">If You want to be different, creative and competitive, to have Your own place
+                on the online platform, contact us!
             </p>
             <div class="box__send-contact d-flex">
                 <div class="hexagon__shadow send-contact__input">
@@ -91,8 +79,6 @@
                     <button class="box__send-contact__btn text-default">Send</button>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-6 col-lg-6 col-12 top__section-right">
             <div class="top__section-right__buttons">
                 <div class="hexagon__shadow">
                     <button class="hexagon__button hexagon__transparent top__section-right telegram"></button>
@@ -103,26 +89,6 @@
                         Start Project
                     </a>
                 </div>
-            </div>
-
-            <div class="video__container">
-                <span class="top__video__close">X</span>
-                <div class="full__screen">
-                    <div class="over-layer"></div>
-                    <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1" allowfullscreen
-                            class="top__video" width="750" height="550" frameborder="0"></iframe>
-                </div>
-                <svg style="visibility: hidden; position: absolute;" width="0" height="0"
-                     xmlns="http://www.w3.org/2000/svg" version="1.1">
-                    <defs>
-                        <filter id="round">
-                            <feGaussianBlur in="SourceGraphic" stdDeviation="5" result="blur"/>
-                            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9"
-                                           result="goo"/>
-                            <feComposite in="SourceGraphic" in2="goo" operator="atop"/>
-                        </filter>
-                    </defs>
-                </svg>
             </div>
         </div>
     </div>
