Added home page slider

--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
     <img src="assets/images/icons/close__menu.svg" class="mobile__menu__icon-close toggleMobileMenu">
 </nav>
 
-<img src="assets/images/main__bg__desktop.png" class="desktop__bg" alt="BG">
+<!--  Home page bg slider  -->
+<div class="home__bg__slider__container">
+    <div class="home__bg__slider">
+        <img src="assets/images/main__bg__desktop.png" class="home__bg__slider-item" alt="slide">
+        <img src="assets/images/main__bg__desktop.png" class="home__bg__slider-item" alt="slide">
+        <img src="assets/images/main__bg__desktop.png" class="home__bg__slider-item" alt="slide">
+    </div>
+</div>
+
 <div class="container">
     <!--  Top section  -->
     <div class="row" id="first_section">
